fix: align and clean up table design (#1003)
* Aligns the design between the tables inside markdown and the tables in the API docs. I chose to go with the design from the API docs, because the separation between cells is much better.
* Fixes the poor color contrast on the table border by using the correct theming variables.
* Removes the table box shadow and fixes up some spacings to make the tables look better.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/styles/_markdown.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/styles/_markdown.scss
@@ -52,30 +52,6 @@
   code {
     padding: 3px;
   }
-
-  // Target direct descendants here so that the styles don't bleed into the live examples.
-  > table {
-    text-align: left;
-    table-layout: fixed;
-    border-collapse: collapse;
-    margin-bottom: 1em;
-    font-size: 14px;
-
-    tr {
-      height: 48px;
-    }
-
-    th, td {
-      padding: 8px 4px 8px 0;
-      border-bottom-width: 1px;
-      border-bottom-style: solid;
-    }
-
-    // Code tends to wrap inside tables which doesn't look great with the background color.
-    code {
-      background: transparent;
-    }
-  }
 }
 
 .docs-header-link {
